--- a/between_app/templates/between_app/test-home.html
+++ b/between_app/templates/between_app/test-home.html
@@ -5,12 +5,12 @@
 {% load static %}
 
 <!--Title card-->
-<div class="card mb-3 border-primary border-3 soft-green">
-    <div class="card-body">
-<h2 class="card-title">Therapist Style</h2>
-<p class='card-text'>Here you can see your therapeutic style</p>
-    </div></div>
-
+<div class="card mb-3 mt-2 border-primary border-3 soft-green">
+<div class="card-body">
+  <h2 class="card-title">Therapist Style</h2>
+    <p class='card-text'>Here you can see your therapeutic style</p>
+  </div>
+</div>
 
     {% if user.is_authenticated %}
  <!--Personal Profile-->   
