--- a/learning_logs/templates/learning_logs/index.html
+++ b/learning_logs/templates/learning_logs/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 {% load static %}
 
-<div class="card mb-3 border-primary border-3 soft-green"> 
+<div class="card mb-3 mt-2 border-primary border-3 soft-green"> 
   <div class="card-body">
 
 <h2 class='card-title'>Journal Space</h2>
