--- a/techniques_app/templates/techniques_app/index.html
+++ b/techniques_app/templates/techniques_app/index.html
@@ -6,11 +6,11 @@
 {% load static%}
 
 
-<div class='card p-3 mb-4 soft-orange border-3 border-primary rounded-3'  style='max-width: 1000px;'>
+<div class='card px-3 mt-2 mb-4 soft-orange border-3 border-primary rounded-3'  style='max-width: 1000px;'>
     <div class='container-fluid py-4'>
-        <h1 class='display-3'>The Tecniques Space</h1>
+        <h1 class='display-5'>The Tecniques Space</h1>
         <p class='lead'>This is a space to write your own ways of working with components</p>
-        <p class='lead'>You can opt to share and see the insight of others</p>
+        <p class='card-text'>You can opt to share and see the insight of others</p>
 
         <a class="badge bg-primary p-2 m-2" href={% url 'techniques_app:saved_techniques' %}>My Saved Techniques </a>
         <a class="badge bg-primary p-2 m-2" href={% url 'techniques_app:components_list' %}>Comunity Techniques</a></br>
