--- a/accounts/templates/allauth/layouts/entrance.html
+++ b/accounts/templates/allauth/layouts/entrance.html
@@ -4,7 +4,7 @@
     <div class="flex-grow-1 bg-body-secondary d-flex flex-column justify-content-center">
         <div class="flex-grow-0 flex-shrink-0 container">
             <div class="row justify-content-md-center">
-                <div class="col col-lg-4">
+                <div class="col col-lg-10">
                     {% if messages %}
                         {% for message in messages %}
                             {% element alert level=message.tags %}
@@ -14,8 +14,8 @@
                             {% endelement %}
                         {% endfor %}
                     {% endif %}
-                    <div class="bg-white shadow rounded-4">
-                        <div class="p-5">
+                    <div class="bg-body-tertiary shadow rounded-4">
+                        <div class="p-4">
                             {% block content %}{% endblock %}
                         </div>
                     </div>
