--- a/between_app/static/between_app/css/style.css
+++ b/between_app/static/between_app/css/style.css
@@ -11,7 +11,9 @@
     background-color: rgb(238, 241, 232);
 }
 
-
+.cold-white{
+    background-color: rgb(236, 242, 244);
+}
 .soft-orange {
     background-color: rgb(252, 228, 187);
 }
