--- a/between_app/templates/between_app/personal_style/profile_test.html
+++ b/between_app/templates/between_app/personal_style/profile_test.html
@@ -6,6 +6,10 @@
 {% endblock page_header%}
 
 {%block content%}
+
+<div class="card">
+  <div class="card-body">
+    <h4 class="card-title">Profile Test</h4>
 <p>This is a text to help you reflect about your prefered positions at the time of working with people.</p>
 <p>It is composed of questions regaring your practice that add up to shape a profile. You can review previous tests and see your scores to have a more nuanced sense.</p>
 <p>The idea is for it to be flexible, and for it to be representative of yourself. I hope it can help you as a fluent mirror that keeps track of your process.</p>
@@ -16,6 +20,13 @@
   <li>Between 60% and 80% its a clear preference</li>
   <li>Between 80% and 100% its your prefered view</li>
 </ul>
+</div>
+</div>
+
+<div class="card">
+  <div class="card-body">
+    <h4 class="card-title">Profile Test</h4>
+
 
 <form action="{% url 'between_app:profile_test' %}" method='post'>
     {% csrf_token %}
@@ -23,4 +34,6 @@
     {% bootstrap_button button_type='submit' content='Submit Profile' %}
   </form>
 
+</div>
+</div>
 {% endblock content %}
