--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -2,16 +2,23 @@
 
 {%block title%}Theory Home{%endblock title%}
 
-{%block page_header%}To understand the theory behind {%endblock page_header%}
-
 
 {%block content%}
-<h2>CreaTherapy: </h2>
-<p>This section is to understand the ideas behind CreaTherapy, as a new creative view of psychotherapy.</p>
-<a class="badge bg-primary p-2 m-2" href={% url 'pages:intro' %}>Introduction </a>
-<a class="badge bg-primary p-2 m-2" href={% url 'pages:profiles' %}>Profiles </a>
-<a class="badge bg-primary p-2 m-2" href={% url 'pages:creation' %}>Creation </a>
-<a class="badge bg-primary p-2 m-2" href={% url 'pages:history' %}>History </a>
+
+<div
+    class="card text-white soft-orange shadow rounded border-primary border-3 mt-2"
+>
+    <div class="card-body text-dark">
+        <h1 class="card-title">CreaTherapy:Theory</h1>
+        <p class='card-text'>This section is to understand the ideas behind CreaTherapy, as a new creative view of psychotherapy.</p>
+        <a class="badge bg-primary p-2 m-2" href={% url 'pages:intro' %}>Introduction </a>
+        <a class="badge bg-primary p-2 m-2" href={% url 'pages:profiles' %}>Profiles </a>
+        <a class="badge bg-primary p-2 m-2" href={% url 'pages:creation' %}>Creation </a>
+        <a class="badge bg-primary p-2 m-2" href={% url 'pages:history' %}>History </a>
+    </div>
+</div>
+
+
 
 
 
