--- a/between_app/templates/between_app/_base.html
+++ b/between_app/templates/between_app/_base.html
@@ -26,7 +26,7 @@
 </head>
 
 <body class='bg-light'>
-<nav class="navbar navbar-expand-lg bg-primary sticky-top start-0" data-bs-theme="dark">
+<nav class="navbar navbar-expand-lg bg-primary sticky-top start-0" data-bs-theme="dark" id="top-nav-bar">
     <div class='container-fluid'>
     
         <a class='navbar-brand' href="{% url 'between_app:index' %}"  
