--- a/between_app/templates/between_app/index.html
+++ b/between_app/templates/between_app/index.html
@@ -19,11 +19,11 @@
     <!--Two starting points depending on user authentication-->
         {% if user.is_authenticated%}
         <h2 class="card-title">Hey, {{user.username}}!</h2>
-        <p class="card-text">Wellcome back!</p>
+        <p class="card-text" id="welcome authenticated">Wellcome back!</p>
         <p class="card-text">Please explore the site and make it your own. All you do is being saved privately and you can come back to it any time.</p>
         {% else %}
         <h2 class="card-title">Hey{% if user.is_authenticated%}, {{user.username}}{%endif%}!</h2>
-        <p class="card-text">CreaTherapy a project to re-imagine psychotherapy, in creative way from theory to practice.</p>
+        <p class="card-text" id="welcome-no-authenticated">CreaTherapy a project to re-imagine psychotherapy, in creative way from theory to practice.</p>
         <p class="card-text">They aim to move between the old traditions, in a context where therapist and clients are learning from multiple points of view and mixing ideas and practices from many sources becomes the new norm.</p>
         <p class="card-text">This approach aims to help you create your own path and style, while keeping strong theory and practice foundations.</p>
        {%endif%}
