--- a/between_app/templates/between_app/personal_style/results_email.html
+++ b/between_app/templates/between_app/personal_style/results_email.html
@@ -17,7 +17,7 @@
 <p>Many new traditions are placed in-between positions, making the current landscape more fluid. This model aims to help therapist and clients to identify the positions where they feel more comfortable and which ones feel harder.</p>
 </br>
 <H1>Your main therapeutic Position</H1>
-    <div class="card bg-active mb-3">
+    <div class="card bg-active mb-3" id="results-card">
     <div class="card-body">
     <h2 class="card-title">{{position.group|title}}</h2>
     <image src="{% static position.image %}" class='card-img-right posImage'>
@@ -49,14 +49,19 @@
    
 </div>
 </div>
+
 <a class="badge bg-primary p-2 m-2" href={% url 'between_app:style_detail' pk %}>See your scores</a></br>
+<a class="badge bg-primary p-2 m-2" href={% url 'account_signup' %} id="signup-link">Sign up</a></br>
 
-
+<div class="card p-2">
+    <h3 class="card-title">Email</h3>
+<p>You can send the results to your email bellow. Consider Signing up to save your results and take multiple tests</p>
 <form action="{% url 'between_app:results' pk %}" method='post'>
     {% csrf_token %}
     {% bootstrap_form form %}
     {% bootstrap_button button_type='submit' content='Send as Email' %}
   </form>
+</div>
 </br>
 
 {% endblock content%}
