advancing with unitests finished with accounts login and out advancing in between app, now workging with traditions

--- a/between_app/templates/between_app/personal_style/profile_test.html
+++ b/between_app/templates/between_app/personal_style/profile_test.html
@@ -10,7 +10,7 @@
 <div class="card">
   <div class="card-body">
     <h4 class="card-title">Profile Test</h4>
-<p>This is a text to help you reflect about your prefered positions at the time of working with people.</p>
+<p>This is a litle test to help you reflect about your prefered positions at the time of working with people.</p>
 <p>It is composed of questions regaring your practice that add up to shape a profile. You can review previous tests and see your scores to have a more nuanced sense.</p>
 <p>The idea is for it to be flexible, and for it to be representative of yourself. I hope it can help you as a fluent mirror that keeps track of your process.</p>
 <p>As a reference you can use the bellow numbers.</p>
