added a landing cover page

--- a/between_app/templates/between_app/_base.html
+++ b/between_app/templates/between_app/_base.html
@@ -84,9 +84,12 @@
 
 <!-- Main section -->
 
-<main class='container'>
+<main>
+
       {% block body %}
-    <div> 
+      {% block intro %}
+      {% endblock intro %}
+    <div class="container-fluid mx-auto col-12 col-md-10"> 
         {% block content %} {% endblock content %}      
     </div>
     {% endblock body %}
