--- a/between_app/templates/between_app/index.html
+++ b/between_app/templates/between_app/index.html
@@ -15,7 +15,7 @@
     <!--Two starting points depending on user authentication-->
         {% if user.is_authenticated%}
         <h2 class="card-title">Hey, {{user.username}}!</h2>
-        <p class="card-text" id="welcome authenticated">Wellcome back!</p>
+        <p class="card-text" id="welcome-authenticated">Wellcome back!</p>
         <p class="card-text">Please explore the site and make it your own. All you do is being saved privately and you can come back to it any time.</p>
         {% else %}
         <h2 class="card-title">Hey{% if user.is_authenticated%}, {{user.username}}{%endif%}!</h2>
@@ -24,7 +24,7 @@
         <p class="card-text">This approach aims to help you create your own path and style, while keeping strong theory and practice foundations.</p>
        {%endif%}
        <a class="badge bg-primary p-2 m-2" href={% url 'pages:index' %}>Read the theory </a>
-       <a class="badge bg-primary p-2 m-2" href={% url 'between_app:profile_test' %}>Take a profile test</a></br>
+       <a class="badge bg-primary p-2 m-2" id="take-test" href={% url 'between_app:profile_test' %}>Take a profile test</a></br>
 
     </div>
 </div>
