--- a/techniques_app/templates/techniques_app/index.html
+++ b/techniques_app/templates/techniques_app/index.html
@@ -11,8 +11,9 @@
         <h1 class='display-5'>The Tecniques Space</h1>
         <p class='lead'>This is a space to write your own ways of working with components</p>
         <p class='card-text'>You can opt to share and see the insight of others</p>
-
+        {% if user.is_authenticated%}
         <a class="badge bg-primary p-2 m-2" href={% url 'techniques_app:saved_techniques' %}>My Saved Techniques </a>
+        {% endif%}
         <a class="badge bg-primary p-2 m-2" href={% url 'techniques_app:components_list' %}>Comunity Techniques</a></br>
     </div>
     </div>
@@ -31,8 +32,13 @@
         <p>Still not personal techniques</p>
         {% endfor %}
 {%else%}
-<p>Here you will be able to see your techniques</p>
-
+<div class='card border-primary border-2 soft-green p-2'>
+<div class="card-title fs-5">A list of your techniques</div>
+<div class="card-title">After Signing In you will see here a list of your techniques and links to explore and save the community repository.</div>
+</div>
+<div class="alert alert-success mt-2" role="alert">
+    Please Sign In so we can open your repository.<a href="{% url 'account_login' %}">Sign In</a>
+  </div>
 {% endif %}
 </div>
 {%endblock content%}
