--- a/between_app/templates/between_app/Components/components_test.html
+++ b/between_app/templates/between_app/Components/components_test.html
@@ -1,19 +1,29 @@
 {%extends 'between_app/_base.html'%}
 {% load django_bootstrap5 %}
 
-{% block page_header%}
-<h2>Components Test</h2>
-{% endblock page_header%}
+{% block title%}
+Components Test
+{% endblock title%}
+
 {%block content%}
-<p> Please slide an approximation of how much you identify with these areas of work</p>
-<p>As a reference:</p>
-<ul>
-  <li>Curious: a few ideas about a topic or model up to 20%</li>
-  <li>Student: Learning a model through study and practice, up to 40%</li>
-  <li>Qualified: Able to do client work ethically with a model, up to 60%</li>
-  <li>Master: Able to work flexible, creatively and connecting with other ideas, up to 90%</li>
-  <li>PhD: Able to connect with the broad field, and to propose new ideas on the topic, up to 100%</li>
+
+<div class="card cold-white">
+  <div class="card-header soft-blue">
+  <div class="card-title display-6">Components Test</div>
+</div>
+  <div class="card-body">
+<p class="card-title"> Please slide an approximation of how much you identify with these areas of work</p>
+<p class="card-title">As a reference:</p>
+<ul class="list-group">
+  <li class="list-group-item"><b>Curious:</b> a few ideas about a topic or model up to 20%</li>
+  <li class="list-group-item"><b>Student:</b> Learning a model through study and practice, up to 40%</li>
+  <li class="list-group-item"><b>Qualified:</b> Able to do client work ethically with a model, up to 60%</li>
+  <li class="list-group-item"><b>Master:</b> Able to work flexible, creatively and connecting with other ideas, up to 90%</li>
+  <li class="list-group-item"><b>PhD:</b> Able to connect with the broad field, and to propose new ideas on the topic, up to 100%</li>
 </ul>
+</div>
+</div>
+{% if user.is_authenticated %}
 <p>How much do you use the following for your therapeutic work?(if a client, you could use to see which one would you like)</p>
   <div class="card bg-active p-2 mb-3">
   <form action="{% url 'between_app:components_test' %}" method='post'>
@@ -21,5 +31,10 @@
     {% bootstrap_form form %}
     {% bootstrap_button button_type='submit' content='Submit Profile' %}
   </form></div>
+{% else %}
+<div class="alert alert-success" role="alert">
+  Please Sign In before taking the test so we can save your results <a href="{% url 'account_login' %}">Sign In</a>
+</div>
+    {% endif%}
 
 {% endblock content %}
