--- a/between_app/templates/between_app/_base.html
+++ b/between_app/templates/between_app/_base.html
@@ -11,7 +11,8 @@
     {% load static %}
     <link rel="stylesheet" href="{% static "between_app/css/style.css" %}">
 
-
+    <!--font icons bootstrap css-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -65,10 +66,14 @@
             {% url 'account_email' as email_url %}
             {% url 'socialaccount_connections' as socialaccount_url %}
             {% if email_url or socialaccount_url %}
-                <a href="{% if email_url %}{{ email_url }}{% else %}{{ socialaccount_url }}{% endif %}"
-                   class="btn btn-outline-secondary">Manage Account</a>
+
+            <!--Account with person icon-->
+                <a href="{% url 'accounts:account_profile' %}"
+                   class="btn text-success"><i class="bi bi-person-circle fs-5"></i></a>
             {% endif %}
-            <a href="{% url 'account_logout' %}" class="btn btn-outline-danger-">Sign Out</a>
+
+            <!--Log out, with exit icon-->
+            <a href="{% url 'account_logout' %}" class="btn text-warning"><i class="bi bi-box-arrow-right fs-5"></i></a>
             {% csrf_token %}
         {% else %}
             <a href="{% url 'account_login' %}" class="btn me-1 btn-outline-light">Sign In</a>
