--- a/between_app/templates/between_app/index.html
+++ b/between_app/templates/between_app/index.html
@@ -9,7 +9,7 @@
 {%block content%}
 
 
-<div class="card mb-3 shadow border-primary border-3 col-10 mx-auto">
+<div class="card mb-3 shadow border-primary border-3 col-10 mx-auto" id="intro-card">
     <div class="card-body cold-white  rounded">
     <div class="col-lg-10 mx-auto">
     <!--Two starting points depending on user authentication-->
@@ -18,16 +18,16 @@
         <p class="card-text" id="welcome-authenticated">Welcome back!</p>
         <p class="card-text">Please explore the site and make it your own. All you do is being saved privately and you can come back to it any time.</p>
         {% else %}
-        <h2 class="card-title">Hey{% if user.is_authenticated%}, {{user.username}}{%endif%}!</h2>
-        <p class="card-text" id="welcome-no-authenticated">CreaTherapy a project to re-imagine psychotherapy, in creative way from theory to practice.</p>
-        <p class="card-text">They aim to move between the old traditions, in a context where therapist and clients are learning from multiple points of view and mixing ideas and practices from many sources becomes the new norm.</p>
-        <p class="card-text">This approach aims to help you create your own path and style, while keeping strong theory and practice foundations.</p>
+        <h2 class="card-title">Hey!</h2>
+        <p class="card-text" id="welcome-no-authenticated">
+            <i class="bi bi-play-fill"></i>CreaTherapy a project to re-imagine psychotherapy, in creative way from theory to practice.</p>
+        <p class="card-text">
+            <i class="bi bi-play-fill"></i>This this app will help you create your own path and style, track your changes, while giving you strong theory and practical foundations.</p>
        {%endif%}
-       <a class="badge bg-primary p-2 m-2" href={% url 'pages:index' %}>Read the theory </a>
-       <a class="badge bg-primary p-2 m-2" id="take-test" href={% url 'between_app:profile_test' %}>Take a profile test</a></br>
-
     </div>
 </div>
+</div>
+{% include "between_app/about_texts.html" %}
 
 
 {%endblock content%}
