--- a/learning_logs/templates/learning_logs/creating/create_reflection.html
+++ b/learning_logs/templates/learning_logs/creating/create_reflection.html
@@ -1,20 +1,41 @@
 {% extends 'between_app/_base.html' %}
 
+
+{% block title%}
+Creative Reflection
+{% endblock title%}
 {%block content%}
 {% load django_bootstrap5 %}
-  <h2> After Session Questions </h2>
-  <a href={% url 'learning_logs:index' %}>Creations</a>
 
+<div class="card cold-white">
+  <div class="card-header soft-blue">
+  <div class="card-title display-6">Creative Reflection</div>
+</div>
+  <div class="card-body">
+    <p class="card-title fs-5">A guided creative reflection:</p>
+    <p class="card-title"> Please relax and take your time thinking the prompts.</p>
 
+    <div class="card-title fs-5">Creative Prompts:</div>
+    
+    {% if user.is_authenticated%}
+    
+  <div class="card p-2 border-primary border-1">
   <form action="{% url 'learning_logs:new_creation' %}" method='post'>
     {% csrf_token %}
     {% bootstrap_form form %}
     {% bootstrap_button button_type='submit' content='New Creation' %}
   </form>
+</div>
 
+{% else %}
+<div class="alert alert-success" role="alert">
+  Please Sign In before writing this reflection, so we can save it for you. <a href="{% url 'account_login' %}">Sign In</a>
+</div>
+    {% endif%}
 
 <a href="{% url 'learning_logs:creations_by_date' %}" class="card-link">Back to Creations list</a>
 <a href="{% url 'learning_logs:index' %}" class="card-link">Back to Journaling</a>
+</div>
 
 </br></br>
   {% endblock content %}
