--- a/learning_logs/templates/learning_logs/shadow/new_shadow.html
+++ b/learning_logs/templates/learning_logs/shadow/new_shadow.html
@@ -1,16 +1,33 @@
 {% extends 'between_app/_base.html' %}
 
+{% block title%}
+Shadow Entry
+{% endblock title%}
+
 {%block content%}
 {% load django_bootstrap5 %}
-  <h2> Creation Reflections </h2>
-  <a href={% url 'learning_logs:index' %}>Creations</a>
 
+
+<div class="card cold-white">
+  <div class="card-header soft-blue">
+  <div class="card-title display-6">Shadow Reflections</div>
+</div>
+  <div class="card-body">
+<p class="card-title">This prompt helps you to think about areas outside your awareness.</p>
+<p class="card-title">Please take a moment to reflect on them.</p>
+
+{% if user.is_authenticated %}
 
   <form action="{% url 'learning_logs:new_shadow' %}" method='post'>
     {% csrf_token %}
     {% bootstrap_form form %}
     {% bootstrap_button button_type='submit' content='New Shadow Journal' %}
   </form>
+{% else %}
+<div class="alert alert-success" role="alert">
+  Please Sign In before anwsering, so we can save your results <a href="{% url 'account_login' %}">Sign In</a>
+</div>
+{% endif %}
 
   <a href="{% url 'learning_logs:shadows_by_date' %}" class="card-link">Back to Shadow list</a>
   <a href="{% url 'learning_logs:index' %}" class="card-link">Back to Journaling</a>
