changed a few colors added a birght yellow to the main title and a burnt yellow to the nav links

--- a/between_app/static/between_app/css/style.css
+++ b/between_app/static/between_app/css/style.css
@@ -1,10 +1,10 @@
 
 
 .soft-blue {
-    background-color: rgb(142, 182, 192);
+    background-color: rgb(166, 213, 225);
 }
 .soft-green {
-    background-color: rgb(180, 209, 200);
+    background-color: rgb(187, 231, 217);
 }
 
 .warm-white {
@@ -15,9 +15,16 @@
     background-color: rgb(236, 242, 244);
 }
 .soft-orange {
-    background-color: rgb(252, 228, 187);
+    background-color: rgb(252, 223, 174);
 }
 
+.t-burnt-yellow {
+    color: rgb(171, 159, 127)
+}
+
+.t-bright-yellow {
+    color: rgb(250, 229, 171)
+}
 
 .posImage {
     max-height: 15em;
