--- a/between_app/templates/between_app/_base.html
+++ b/between_app/templates/between_app/_base.html
@@ -30,7 +30,7 @@
 <nav class="navbar navbar-expand-lg bg-primary sticky-top start-0" data-bs-theme="dark" id="top-nav-bar">
     <div class='container-fluid'>
     
-        <a class='navbar-brand' href="{% url 'between_app:index' %}"  
+        <a class='navbar-brand t-bright-yellow' href="{% url 'between_app:index' %}"  
             style="font-family:'Edu AU VIC WA NT Hand',verdana,san-serif;">
           <img
           src="{% static "between_app/favicon_io/favicon-32x32.png"%}"
@@ -49,16 +49,16 @@
         <div class='collapse navbar-collapse' id='navbarCollapse'>
             <ul class='navbar-nav me-auto mb2 mb-md-0'> <!-- 'me' refers to left, and 'ms' to right -->
                 <li class='nav-item'>
-                    <a class='nav-link' href="{% url 'between_app:test_home' %}">
+                    <a class='nav-link t-burnt-yellow' href="{% url 'between_app:test_home' %}">
                         My Tests</a></li>
                 <li class='nav-item'>
-                    <a class='nav-link' href="{% url 'learning_logs:index' %}">
+                    <a class='nav-link t-burnt-yellow' href="{% url 'learning_logs:index' %}">
                         My Journal</a></li>
                 <li class='nav-item'>
-                    <a class='nav-link' href="{% url 'pages:index' %}">
+                    <a class='nav-link t-burnt-yellow' href="{% url 'pages:index' %}">
                         Theory</a></li>
                 <li class='nav-item'>
-                  <a class='nav-link' href="{% url 'techniques_app:index' %}">
+                  <a class='nav-link t-burnt-yellow' href="{% url 'techniques_app:index' %}">
                       Techniques</a></li>
             </ul><!-- End of links on left side of nvbar -->
             <!-- Account related links-->
