--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -1,8 +1,45 @@
 {% extends "allauth/layouts/manage.html" %}
+{% load django_bootstrap5%}
 {% load allauth %}
 {% block content %}
     {% element h1 %}
         Profile
     {% endelement %}
-    <p>Your profile</p>
+
+    <div class="card">
+        <div class="card-body">
+            <h4 class="card-title">Community Profile</h4>
+            <p class="card-text">Your information to display to others.</p>
+            <table class="table table-striped">
+            <tr>
+                <th scope="row">Display name:</th><td>{{profile.name}}</td>
+            </tr>
+            <tr>
+                <th scope="row">Display about:</th><td>{{profile.about}}</td>
+            </tr>
+        </table>
+            <a href="{% url 'accounts:edit_profile' %}">Edit community profile</a>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="card-body">
+            <h4 class="card-title">Account Status</h4>
+            <p class="card-text">Tell us if you are a therapist or a client. In the future we may do things different depeending on this.</p>
+            <p class="card-text">Currently all accounts have access to the whole site. Please consider donating so we can keep it free. </p>
+            <table class="table table-striped">
+            <tr>
+                <th>User type:</th><td>{{status.therapist|yesno:"Therapist,Client"}}</td>
+            <tr>    
+                <th>Account Type:</th><td>{{status.premium|yesno:"Premium,Normal"}}</td>
+            </tr>
+        </table>
+            <a href="{% url 'accounts:edit_status' %}">Edit account status</a>
+
+        </div>
+    </div>
+    
+
 {% endblock content %}
+
+
