added new requirements added buy me a coffee link

--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -26,7 +26,7 @@
         <div class="card-body">
             <h4 class="card-title">Account Status</h4>
             <p class="card-text">Tell us if you are a therapist or a client. In the future we may do things different depeending on this.</p>
-            <p class="card-text">Currently all accounts have access to the whole site. Please consider donating so we can keep it free. </p>
+            <p class="card-text">Currently all accounts have access to the whole site. Please consider <a href="https://buymeacoffee.com/creatherapy">buying me a coffee</a> to keep the project going. </p>
             <table class="table table-striped">
             <tr>
                 <th>User type:</th><td>{{status.therapist|yesno:"Therapist,Client"}}</td>
