--- a/between_app/templates/between_app/_base.html
+++ b/between_app/templates/between_app/_base.html
@@ -119,7 +119,7 @@
                 <a class="nav-link fw-light" href='/about/'>About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link fw-light" href='/about/'>Therapy</a>
+                <a class="nav-link fw-light" href='https://www.gabrielsoler.co.uk/'>Therapy</a>
               </li>
             </ul>
             <span class="navbar-text fw-light">
