updated the signal function to catch errors instead of activate with an if (that was not working) also added a text at the end of front page for sign up

--- a/between_app/templates/between_app/index.html
+++ b/between_app/templates/between_app/index.html
@@ -31,3 +31,15 @@
 
 
 {%endblock content%}
+
+{% block extra_body %}
+{% if user.is_authenticated == False %}
+<div class="alert alert-info display-5 mx-3 mt-3" role="alert">
+    Signup for Free to get full access. <a class="alert-link" href="{% url 'account_signup' %}">Signup here.</a>
+  </div>
+{% else %}
+<div class="alert alert-secondary display-5 mx-3 mt-3" role="alert">
+    Update your community profile. <a class="alert-link" href="{% url 'accounts:edit_profile' %}">Update here.</a>
+  </div>
+{% endif %}
+{% endblock extra_body %}
