--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -6,7 +6,7 @@
         Profile
     {% endelement %}
 
-    <div class="card">
+    <div class="card mb-3">
         <div class="card-body">
             <h4 class="card-title">Community Profile</h4>
             <p class="card-text">Your information to display to others.</p>
@@ -22,13 +22,13 @@
         </div>
     </div>
 
-    <div class="card">
+    <div class="card mb-3">
         <div class="card-body">
             <h4 class="card-title">Account Status</h4>
             <p class="card-text">Tell us if you are a therapist or a client. In the future we may do things different depeending on this.</p>
             <p class="card-text">Currently all accounts have access to the whole site. Please consider <a href="https://buymeacoffee.com/creatherapy">buying me a coffee</a> to keep the project going. </p>
             <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="CreaTherapy" data-color="#FFDD00" data-emoji="☕"  data-font="Cookie" data-text="Buy me a coffee" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff" ></script>
-            <table class="table table-striped">
+            <table class="table table-striped mt-3">
             <tr>
                 <th>User type:</th><td>{{status.therapist|yesno:"Therapist,Client"}}</td>
             <tr>    
@@ -38,7 +38,30 @@
             <a href="{% url 'accounts:edit_status' %}">Edit account status</a>
         </div>
     </div>
-    
+
+
+    <div class="card mb-5">
+        <div class="card-body">
+            <h4 class="card-title">Privacy and Delete</h4>
+            <p class="card-text">Our privacy policy is that data belongs to you.</p>
+            <ul>
+                <li>We do not use more than escencial Cookies.</li>
+                <li>We do not keep data after you leave, except for the anonimus numbers of your test.</li>
+                <li>Gabriel is the only data controler and keeps data confidential.</li>
+                <li>When you delete your account, your associated data is also erased from the database.</li>
+            </ul>
+            <a
+                name=""
+                id=""
+                class="btn btn-warning"
+                href="{% url 'accounts:delete_account' %}"
+                role="button"
+                >Delete Page</a
+            >
+            
+            
+        </div>
+    </div>
 
 {% endblock content %}
 
