--- a/between_app/templates/between_app/_base.html
+++ b/between_app/templates/between_app/_base.html
@@ -99,6 +99,13 @@
 
       {% block body %}
       {% block intro %}
+    {% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+    {% endfor %}
+</ul>
+{% endif %}
       {% endblock intro %}
     <div class="container-fluid mx-auto col-12 col-md-10"> 
         {% block content %} {% endblock content %}      
