save some bugs fixed, needs testing added some front end spaces and spelling

--- a/accounts/templates/profile/edit-account-profile.html
+++ b/accounts/templates/profile/edit-account-profile.html
@@ -6,7 +6,7 @@
 {% load django_bootstrap5 %}
 
 
-    <h3>Edit account profile</h3>
+    <h3 class='bt-3'>Edit account profile</h3>
 <form action="{%url 'accounts:edit_profile' %}" method='post'>
     {%csrf_token%}
     {% bootstrap_form form %}
