--- a/between_app/templates/between_app/index.html
+++ b/between_app/templates/between_app/index.html
@@ -9,9 +9,9 @@
 {%block content%}
 
 
-<div class="card mb-3 shadow border-primary border-3 col-10 mx-auto" id="intro-card">
+<div class="card mb-3 shadow border-primary border-3 col-12 mx-auto" id="intro-card">
     <div class="card-body cold-white  rounded">
-    <div class="col-lg-10 mx-auto">
+    <div class="col-lg-12 mx-auto">
     <!--Two starting points depending on user authentication-->
         {% if user.is_authenticated%}
         <h2 class="card-title">Hey, {{user.username}}!</h2>
@@ -35,7 +35,7 @@
 {% block extra_body %}
 {% if user.is_authenticated == False %}
 <div class="alert alert-info display-5 mx-3 mt-3" role="alert">
-    Signup for Free to get full access. <a class="alert-link" href="{% url 'account_signup' %}">Signup here.</a>
+    Sign up for free to get full access. <a class="alert-link" href="{% url 'account_signup' %}">Sign up here.</a>
   </div>
 {% else %}
 <div class="alert alert-secondary display-5 mx-3 mt-3" role="alert">
