--- a/techniques_app/templates/techniques_app/saved_techniques.html
+++ b/techniques_app/templates/techniques_app/saved_techniques.html
@@ -2,11 +2,11 @@
 
 {% block title %}Saved Techniques {% endblock title %}
 
-{% block page_header%}
-<h2>Saved Techniques:</h2>
-{% endblock page_header %}
 
 {%block content%}
+
+<h2 class='mt-3'>Saved Techniques:</h2>
+
 <div class='card bt-2' style="max-width: 800px;">
 <ul class='list-group border-bottom pb-2 mb-4 list-group-flash'>
 {%for tech in tech_saved %}
