--- a/techniques_app/templates/techniques_app/group_list.html
+++ b/techniques_app/templates/techniques_app/group_list.html
@@ -1,5 +1,5 @@
 {% extends 'between_app/_base.html' %}
-
+<!--Step to separate techniques by component-->
 {% block title %}Components list{% endblock title %}
 
 {% block page_header%}
