--- a/techniques_app/templates/techniques_app/delete_saved.html
+++ b/techniques_app/templates/techniques_app/delete_saved.html
@@ -2,14 +2,19 @@
 
 {% block title %}Saved Techniques {% endblock title %}
 {% load django_bootstrap5%}
-{% block page_header%}
-<h2>Confirm remove from your list:</h2>
-{% endblock page_header %}
 
 {%block content%}
-<form method='post' action={% url 'techniques_app:delete_technique' tech_pk %}>
-    {% csrf_token %}
-    {% bootstrap_button button_type='submit' content='Remove' %}
-</form>
+<div
+    class="card border-primary mt-3 soft-green"
+>
+    <div class="card-body">
+        <h4 class="card-title">Confirm remove from your list:</h4>
+        <form method='post' action={% url 'techniques_app:delete_technique' tech_pk %}>
+            {% csrf_token %}
+            {% bootstrap_button button_type='submit' content='Remove' %}
+        </form>
+    </div>
+</div>
+
 
 {% endblock content%}
