--- a/techniques_app/templates/techniques_app/techniques_list_community.html
+++ b/techniques_app/templates/techniques_app/techniques_list_community.html
@@ -1,7 +1,6 @@
 {% extends 'between_app/_base.html' %}
-
 {% block title %}Public Techniques {% endblock title %}
-
+<!--Receives two functions, with different lists of techniques, one with compnent tittle one with all of them-->
 
 {%block content%}
 
